data/derived/fa15/progs/unify/prog1897.ml.out
Characters 91-96:
  Printf.printf (x,h);;
                ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type
         ('c, out_channel, unit) format =
           ('c, out_channel, unit, unit, unit, unit)
           CamlinternalFormatBasics.format6
